...
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/registration_product_categoryTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_product_priceLayout" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_product_nameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_product_name" />

            </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_product_nameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_product_price"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

...
                        android:layout_width="31dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/image_addCart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/registration_product_addCartAmountLayout"
                        app:srcCompat="@drawable/ic_cart_black" />

                    <CheckBox
                        android:id="@+id/registration_product_addCart"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:checked="false"
                        app:layout_constraintStart_toEndOf="@+id/imageButton"
                        app:layout_constraintTop_toTopOf="@+id/registration_product_addCartAmountLayout" />
...
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/registration_product_addCart"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_product_addCartAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/registration_product_amount"
                            android:inputType="number"
                            android:textSize="14sp"
                            android:visibility="visible" />
...
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>


            <Spinner
                android:id="@+id/registration_product_categories"
                android:layout_width="269dp"
                android:layout_height="35dp"
                android:layout_marginStart="24dp"
                android:completionThreshold="1"
                android:dropDownHeight="120dp"
                android:dropDownWidth="match_parent"
...
                android:layout_marginStart="32dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_product_addStock">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_product_addStockActualAmountLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_product_addStockActualAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_stock_actualAmount"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_product_addStockMaxAmountLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registration_product_addStockActualAmountLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_product_addStockMaxAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_stock_maxAmount"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
...
