<resources>
    <string name="app_name">Stralom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="save">Salvar</string>


    <string name="cancel">Cancelar</string>
    <string name="cart_dialogTitle_addSimpleProduct">Adicionar Produto Temporario</string>

    <!-- Cart -->
    <!-- Dialog -->
    <string name="cart_dialogTitle_addProduct">Adicionar Produto</string>
    <string name="cart_dialogTitle_addRecipe">Adicionar Receita</string>
    <string name="itemCartAmount">Quantidade</string>

    <!-- ItemCart -->
    <string name="itemcart_itemList_name"> %s </string>
    <string name="itemcart_itemList_amount"> %sx  </string>
    <string name="dialog_checkbox_updateStock">Atualizar Estoque</string>

    <!-- Stock -->
    <string name="itemStock_actualAmount">Quantidade Atual</string>

    <!-- ItemStock -->
    <string name="itemStock_maxAmount">Quantidade Máxima</string>
    <string name="itemStock_actualAmountShort">Atual</string>
    <string name="itemStock_maxAmountShort">Max</string>
    <string name="stock_dialogTitle_addProduct">Adicionar ao Estoque</string>
    <!-- Dialog -->
    <string name="productCategory">Categoria</string>


    <!-- Product -->
    <string name="btnProductRegistration">Cadastro de Produto</string>
    <string name="product_itemList_price">%.2f R$</string>
    <!-- Product - ItemList -->
    <string name="title_RecipeRegistration">Nova Receita</string>

    <string name="dialog_simpleProduct_amount">Quantidade ( Opcional) </string>
    <string name="productName">Nome</string>
    <!-- Register Form -->
    <string name="productPrice">Preço</string>
    <string name="category_Meat">Carnes</string>
    <string name="category_Fruit">Frutas</string>
    <string name="recipeName">Nome</string>
    <string name="recipeAmount">Quantidade</string>

    <!-- Recipe -->
    <string name="form_title_ItemRecipeRegistration">Adicionar Ingrediente</string>
    <string name="imageDescription_form_recipe">Imagem padrão de uma receita</string>
    <string name="recipe_itemList_name"><b>%s</b> </string>
    <string name="recipe_itemList_price">Preço: %.2f R$</string>
    <!-- Recipe - ItemList -->
    <string name="recipe_itemList_ingredientCount">Numero de Ingredientes: %d</string>
    <string name="info_recipeDialog">INFO: Todos os ingredientes serão adicionados ao carrinho.</string>
    <string name="itemCart_toast_productAdded">Produto adicionado !</string>


    <!-- Others -->
    <string name="toast_product_update">Produto atualizado.</string>
    <string name="toast_produc_register">Produto Salvo !</string>
    <string name="swipe_remove">REMOVER</string>
    <string name="check">Confirmar</string>
    <string name="registration_recipe_selectIngredient">Selecionar Ingredientes</string>
    <string name="delete">Deletar</string>
    <string name="edit">Editar</string>
    <string name="imageDescription_productCategory">Icone da Categoria </string>
    <string name="produto">Produto</string>
    <string name="recipeIngredientsCount">Total de Ingredientes</string>
    <string name="recipePrice">Preço</string>
    <string name="recipe_contentDescription_basicImage">Imagem padrão da receita</string>
    <string name="contentDescription_iconDelete">Icone de deletar</string>
    <string name="title_activity_product_registration">ProductRegistrationActivity</string>
    <string name="contentDescription_categoryIcon">Icone da Categoria</string>
    <string name="snackbar_undo">DESFAZER</string>
    <string name="itemCart_toast_productAlreadyRegistered">Produto já esta cadastrado.</string>
    <string name="product_validation_name">Preencha o nome do produto.</string>
    <string name="validation_maxLenght">O numero de caracteres não deve ser superior a 25</string>
    <string name="product_validation_price">Campo obrigatório.</string>
    <string name="itemCart_validation_amount">Campo obrigatório.</string>
    <string name="validation_obrigatoryField">Campo obrigatório.</string>
    <string name="itemCart_validation_simpleItemAlreadyExists">Já existe um produto cadastrado com esse nome.</string>
    <string name="toast_recipe_alreadyRegistered">Receita já cadastrada.</string>
    <string name="recipe_validation_ingredients"> %s ( Obrigatório )</string>
    <string name="toast_itemStock_validRegistration">Produto Cadastrado !</string>
    <string name="toast_itemStock_invalidRegistration">O produto já está cadastrado.</string>
    <string name="itemCart_emptyList_title">Nenhum item cadastrado</string>
    <string name="itemCart_emptyList_description">Os itens adicionados ao carrinho serão exibidos aqui.</string>

    <!-- EmptyList -->
    <string name="product_emptyList_title">Nenhum produto cadastrado</string>
    <string name="product_emptyList_description">Os produtos serão exibidos aqui. </string>
    <string name="recipe_emptyList_title">Nenhuma receita cadastrada.</string>
    <string name="recipe_emptyList_description">As receitas serão exibidas aqui. </string>
    <string name="emptyList_image_contentDescription">Imagem meramente ilustrativa</string>
    <string name="stock_emptyList_title">Nenhum item cadastrado</string>
    <string name="stock_emptyList_description">Os itens adicionados ao estoque serão exibidos aqui.</string>
    <string name="list_removedItems">%d items removidos.</string>
    <string name="list_oneRemovedItems">%d item removido.</string>
    <string name="itemCart_registration_products">Produtos</string>
    <string name="itemCart_registration_recipes">Receitas</string>
    <string name="itemCart_registration_save">Salvar</string>
    <string name="product_registration_title">Novo Produto</string>
    <string name="registration_product_price">Preço</string>
    <string name="registration_product_name">Nome</string>
    <string name="registration_product_categoryTitle">Categoria</string>
    <string name="registration_product_addStockTitle">Adicionar ao Estoque</string>
    <string name="registration_stock_actualAmount">Quantidade atual</string>
    <string name="registration_stock_maxAmount">Quantidade máxima</string>
    <string name="registration_product_addCartTitle">Adicionar ao Carrinho</string>
    <string name="image_addCart">Add to cart Icon</string>
    <string name="registration_product_amount">Quantidade</string>
    <string name="registration_product_imageNewCategory">Botão - Adicionar nova categoria.</string>
    <string name="error_product_alreadyRegistered">Já existe um produto cadastrado com esse nome.</string>
    <string name="money_sign"> R$</string>
    <string name="stock_maxTxt">max</string>
    <string name="stock_minTxt">atual</string>
    <string name="search_product">Procurar</string>
    <string name="stock_register">Adicionar ao Estoque</string>
    <string name="stock_registration_selectProduct">Selecione o Produto</string>
    <string name="contentDescription_stock_expandProductsListIcon">Icone para substituir o produto escolhido</string>
    <string name="cart_snackbar_confirmCheck">Concluído</string>
    <string name="itemStock_update_productTitle">Produto:</string>
    <string name="itemstock_consume_recipeTitle">Consumir Receita</string>
    <string name="itemstock_consume_productTitle">Consumir Produto</string>
    <string name="amountFieldTitle">Quantidade: </string>
    <string name="updateItem">Atualizar Item</string>
    <string name="error_title_recipesNotRegistered">Nenhuma receita cadastrada</string>
    <string name="error_message_recipesNotRegistered">  Cadastre receitas para poder atualizar rapidamente os ingredientes presentes no estoque.</string>
    <string name="error_positiveButton_recipesNotRegistered">Cadastrar Receitas</string>
    <string name="error_title_itemStockNotRegistered">Nenhum item cadastrado</string>
    <string name="error_message_itemStockNotRegistered"> Para atualizar um item é necessário que haja algum produto adicionado ao estoque.</string>
    <string name="error_positiveButton_itemStockNotRegistered">Cadastrar Item</string>
    <string name="error_title_procutsNotRegistered">Nenhum produto cadastrado</string>
    <string name="error_message_productsNotRegistered"> Para pode adicionar um item ao estoque é necessario que exista produtos cadastrados.</string>
    <string name="error_positiveButton_productsNotRegistered">Cadastrar Produto</string>
    <string name="title_activity_login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_signin_google">Entrar com Google</string>
    <string name="login_signin_facebook">ENTRAR COM FACEBOOK</string>
    <string name="login_signup_btn">Não tem uma conta ? Cadastre-se !</string>
    <string name="login_forgotpassword_btn">Esqueceu sua senha ?</string>
    <string name="logo">Stralom logo</string>
    <string name="login_signin">Entrar</string>
    <string name="register_senha">Senha</string>
    <string name="register_email">E-mail</string>
    <string name="register_nome">Nome</string>
    <string name="register_submit">Cadastrar</string>
    <string name="register_logar">Já possuio uma conta ? Entrar</string>
    <string name="facebook_application_id" translatable="false">373016280044299</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb373016280044299</string>
    <string name="register_confirmEmail">Confirme seu email</string>
    <string name="categories_productTemporary">Produto Temporario</string>
    <string name="sharedPreferences_profiles">profiles</string>
    <string name="sharedPreferences_selectedProfile">selectedProfile</string>
    <string name="registration_newitem">Carrinho Atualizado !</string>
    <string name="profile_itemList_productCount">Produtos: %d</string>
    <string name="profile_itemList_recipeCount">Receitas: %d</string>
    <string name="profile_itemList_cartCount">Carrinho: %d</string>
    <string name="profile_itemList_stockCount">Estoque: %d</string>
    <string name="sharedPreferences_userUid">userUid</string>
    <string-array name="tab_titles">
        <item>Carrinho</item>
        <item>Produtos</item>
        <item>Receitas</item>
        <item>Estoque</item>
    </string-array>
    <string-array name="categories">
        <item>Carnes</item>
        <item>Congelados</item>
        <item>Doces</item>
        <item>Frutas</item>
        <item>Legumes</item>
        <item>Higiene</item>
    </string-array>


</resources>
