<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_view_main">

    <include
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/product_emptyList"
        layout="@layout/empty_list"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/product_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
        />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/product_btn_addNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            app:useCompatPadding="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:src="@drawable/ic_add"
            android:backgroundTint="@color/colorPrimaryDark"
            />


        <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/btn_newProduct"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_margin="16dp"-->
            <!--android:backgroundTint="@color/colorPrimary"-->
            <!--android:src="@drawable/ic_add"/>-->
    <include
        android:id="@+id/product_management_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/management_list"
        />


    </RelativeLayout>

