<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="9dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_dialog_mainLayout">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnProductRegistration"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/form_productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productName"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:inputType="textCapWords|textShortMessage" />

            <EditText
                android:id="@+id/form_productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productPrice"
                android:textSize="20sp"
                android:inputType="numberDecimal"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/productCategory"
                android:textSize="20sp"
                android:layout_marginTop="10sp"/>

            <Spinner
                android:id="@+id/form_productCategory"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:entries="@array/categories"/>



 </LinearLayout>

